trying google analytics

--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
   <title>TEDx MIT Ujjain</title>
 </head>
 
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9520S0X4P0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9520S0X4P0');
+</script>
+
+
 <body>
   <div id="root">
     <script type="module" src="/src/main.jsx"></script>
